[package]
name = "autput"
version = "0.1.0"
authors = ["Daniel P H Fox <danielphfox@gmail.com>"]
edition = "2021"
description = "Log Rust prints and panics to Luau for easy debugging."
repository = "https://github.com/dphfox/autput"
license = "MIT"
keywords = ["roblox", "wasm", "wasynth", "lua", "luau"]
categories = ["wasm", "development-tools::debugging"]

[lib]
name = "autput"

[dependencies]
log = { version = "0.4.21", features = ["std"] }
